--- a/eda_example.ipynb
+++ b/eda_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 456,
    "id": "0b220de5-b6fc-4ca1-b96a-ab632b38d298",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 500,
    "id": "8a1ba102-94e2-4373-8b3b-aa414fcaf5c1",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 459,
    "id": "565d99dd-c731-4812-a538-91875ecddcad",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4           0   주문취소  오후 12:60  100022085V2_1559  "
       ]
      },
-     "execution_count": 260,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 460,
    "id": "c454b8f0-02d6-4b70-9cff-1399346077cb",
    "metadata": {
     "scrolled": true
@@ -296,7 +296,7 @@
        "4           4  19391488  정상회원  여  52  연결앱결제   기혼  False  대전광역시    중구"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 461,
    "id": "1fb4f1fe-1ad1-4986-84fb-7ef2894fa4ed",
    "metadata": {
     "scrolled": true
@@ -395,7 +395,7 @@
        "4  100025V2_3      가리비   생물수산  패류/갑각류        1kg"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 461,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 467,
    "id": "ccb6b4a5-1f80-44c4-b4ae-e4afbdb7d74f",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "[373551 rows x 1 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 467,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 468,
    "id": "418538c7-dced-441a-8250-88179fb3365b",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "7997"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 469,
    "id": "a6bab5ac-1bf0-4f36-ab26-0adaf3bd60f1",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 474,
    "id": "a094f06a-1205-4b63-82f9-80e556681118",
    "metadata": {},
    "outputs": [
@@ -634,13 +634,13 @@
    "source": [
     "## 배송 지연율\n",
     "\n",
-    "- 당일배송이 아닐 경우 배송이 지연되었다고 판단\n",
+    "- 당일배송이 아닐 경우 배송이 지연되었다고 판단함\n",
     "- 배송 지연율 = (지연된 배송 건수 / 전체 배송 건수) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 477,
    "id": "acd42cf0-2214-4434-a768-82d7ad393d11",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 479,
    "id": "ef731f75-1c4c-477d-b415-04fc3239a5c5",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "[637476 rows x 14 columns]"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 479,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 481,
    "id": "f26a66e7-d3f0-42ea-88cd-83e9d555c566",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 483,
    "id": "44689c2c-b7d8-4d2c-b80a-c53977b19c77",
    "metadata": {},
    "outputs": [
@@ -978,9 +978,444 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85c2a77e-b7d8-48f3-961d-562e411fbf61",
+   "metadata": {},
+   "source": [
+    "## 정기구독률\n",
+    "- 전체 회원 중 구독가입을 한 고객의 비율\n",
+    "- (구독 회원 수 / 전체 회원 수) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 522,
+   "id": "08487693-5a10-4b86-b444-bc3f3f374b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체 회원 수: 12540\n",
+      "정기구독 회원 수: 1753\n",
+      "정기구독률: 13.98 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# '구독여부' 컬럼 구성 카테고리 확인\n",
+    "df_member['구독여부'].value_counts(dropna=False)\n",
+    "\n",
+    "# 전체 회원 수 계산\n",
+    "member_total = df_member.shape[0]\n",
+    "print ('전체 회원 수:', member_total)\n",
+    "\n",
+    "# 구독한 회원 수 계산\n",
+    "member_sub = df_member[df_member['구독여부'] == True].shape[0]\n",
+    "print ('정기구독 회원 수:', member_sub)\n",
+    "\n",
+    "# 정기구독률 계산\n",
+    "sub_rate = (member_sub / member_total) * 100\n",
+    "print ('정기구독률:', round(sub_rate, 2), '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eab30f3-7b71-4b6b-bf8b-2dcc6f496be2",
+   "metadata": {},
+   "source": [
+    "## 유령고객 비율\n",
+    "- 탈퇴하지 않은 회원 중 최근 n개월 간 주문이 없는 고객\n",
+    "- 회원상태분류: 정상회원/탈퇴/탈퇴처리중/탈퇴신청\n",
+    "- '정상회원'에 속하는 고객을 기준으로 함\n",
+    "- (주어진 데이터의 가장 최신 주문일) - (각 회원별로 마지막 주문일)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 534,
+   "id": "8cfd4106-fc47-4ed3-89b7-1dec4c52b6a3",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회원번호</th>\n",
+       "      <th>회원상태</th>\n",
+       "      <th>구매수량</th>\n",
+       "      <th>구매금액</th>\n",
+       "      <th>주문일시</th>\n",
+       "      <th>배송시작일</th>\n",
+       "      <th>배송완료일</th>\n",
+       "      <th>사용 적립금</th>\n",
+       "      <th>사용 포인트 네이버</th>\n",
+       "      <th>주문취소여부</th>\n",
+       "      <th>주문시간</th>\n",
+       "      <th>제품번호</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1032097472</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7083</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>주문취소</td>\n",
+       "      <td>오후 12:60</td>\n",
+       "      <td>100021783V2_1337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1032097472</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>29865</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오후 12:60</td>\n",
+       "      <td>100022137V2_1606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1032097472</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23164</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오후 12:60</td>\n",
+       "      <td>100021452V2_1113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>369152832</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16655</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>2021-01-03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오후 12:60</td>\n",
+       "      <td>10002931V2_708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1032097472</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8423</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>주문취소</td>\n",
+       "      <td>오후 12:60</td>\n",
+       "      <td>100022085V2_1559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668106</th>\n",
+       "      <td>1523874368</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>166554</td>\n",
+       "      <td>2021-10-19</td>\n",
+       "      <td>2021-10-20</td>\n",
+       "      <td>2021-10-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오전 01:00</td>\n",
+       "      <td>100022543V2_1912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668107</th>\n",
+       "      <td>402835520</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12635</td>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>2021-10-24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오전 01:00</td>\n",
+       "      <td>10002432V2_327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668108</th>\n",
+       "      <td>402835520</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7849</td>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>2021-10-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오전 01:00</td>\n",
+       "      <td>100022317V2_1725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668109</th>\n",
+       "      <td>1544381312</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7275</td>\n",
+       "      <td>2021-10-27</td>\n",
+       "      <td>2021-10-27</td>\n",
+       "      <td>2021-10-28</td>\n",
+       "      <td>6270</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오전 01:00</td>\n",
+       "      <td>10002723V2_563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>668110</th>\n",
+       "      <td>413164160</td>\n",
+       "      <td>정상회원</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20676</td>\n",
+       "      <td>2021-10-30</td>\n",
+       "      <td>2021-10-30</td>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>오전 01:00</td>\n",
+       "      <td>100021783V2_1337</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>668111 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              회원번호  회원상태  구매수량    구매금액        주문일시       배송시작일       배송완료일  \\\n",
+       "0       1032097472  정상회원   1.0    7083  2021-01-02         NaN         NaN   \n",
+       "1       1032097472  정상회원   1.0   29865  2021-01-02  2021-01-02  2021-01-02   \n",
+       "2       1032097472  정상회원   1.0   23164  2021-01-02  2021-01-02  2021-01-03   \n",
+       "3        369152832  정상회원   1.0   16655  2021-01-02  2021-01-02  2021-01-03   \n",
+       "4       1032097472  정상회원   1.0    8423  2021-01-02         NaN         NaN   \n",
+       "...            ...   ...   ...     ...         ...         ...         ...   \n",
+       "668106  1523874368  정상회원   1.0  166554  2021-10-19  2021-10-20  2021-10-20   \n",
+       "668107   402835520  정상회원   1.0   12635  2021-10-23  2021-10-23  2021-10-24   \n",
+       "668108   402835520  정상회원   1.0    7849  2021-10-23  2021-10-23  2021-10-23   \n",
+       "668109  1544381312  정상회원   1.0    7275  2021-10-27  2021-10-27  2021-10-28   \n",
+       "668110   413164160  정상회원   2.0   20676  2021-10-30  2021-10-30  2021-11-01   \n",
+       "\n",
+       "        사용 적립금  사용 포인트 네이버 주문취소여부      주문시간              제품번호  \n",
+       "0            0           0   주문취소  오후 12:60  100021783V2_1337  \n",
+       "1            0           0    NaN  오후 12:60  100022137V2_1606  \n",
+       "2            0           0    NaN  오후 12:60  100021452V2_1113  \n",
+       "3            0           0    NaN  오후 12:60    10002931V2_708  \n",
+       "4            0           0   주문취소  오후 12:60  100022085V2_1559  \n",
+       "...        ...         ...    ...       ...               ...  \n",
+       "668106       0           0    NaN  오전 01:00  100022543V2_1912  \n",
+       "668107       0           0    NaN  오전 01:00    10002432V2_327  \n",
+       "668108       0           0    NaN  오전 01:00  100022317V2_1725  \n",
+       "668109    6270           0    NaN  오전 01:00    10002723V2_563  \n",
+       "668110       0           0    NaN  오전 01:00  100021783V2_1337  \n",
+       "\n",
+       "[668111 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 534,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "id": "424b9f42-b386-4673-8855-3946eaa8623c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "회원상태\n",
+       "정상회원     660563\n",
+       "탈퇴         7401\n",
+       "탈퇴처리중       131\n",
+       "탈퇴신청         14\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 536,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sales['회원상태'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 540,
+   "id": "e50bb889-7c98-4440-b6da-221793a599c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 668111 entries, 0 to 668110\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column      Non-Null Count   Dtype  \n",
+      "---  ------      --------------   -----  \n",
+      " 0   회원번호        668111 non-null  int64  \n",
+      " 1   회원상태        668109 non-null  object \n",
+      " 2   구매수량        668111 non-null  float64\n",
+      " 3   구매금액        668111 non-null  int64  \n",
+      " 4   주문일시        668111 non-null  object \n",
+      " 5   배송시작일       637476 non-null  object \n",
+      " 6   배송완료일       637476 non-null  object \n",
+      " 7   사용 적립금      668111 non-null  int64  \n",
+      " 8   사용 포인트 네이버  668111 non-null  int64  \n",
+      " 9   주문취소여부      30635 non-null   object \n",
+      " 10  주문시간        668111 non-null  object \n",
+      " 11  제품번호        668111 non-null  object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 61.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sales.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 581,
+   "id": "dab885d4-7fa0-47b1-8d63-65fb9fd19105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "id": "3bf4ddfe-d1f2-4aa0-a8e1-4b47ff766504",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "최근 주문이 없는 고객 조회(기간을 월 단위로 입력하세요.): 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "유령고객 비율: 50.73 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "def latest_date_order(df_sales, month):\n",
+    "    # '주문일시' 컬럼을 날짜 형식으로 변환\n",
+    "    df_sales['주문일시'] = pd.to_datetime(df_sales['주문일시'], errors='coerce')\n",
+    "\n",
+    "    # 주어진 데이터의 최신 주문일 조회\n",
+    "    latest_date_data = df_sales['주문일시'].max()\n",
+    "\n",
+    "    # 각 회원별 마지막 주문일 조회\n",
+    "    latest_date_member = df_sales.groupby('회원번호')['주문일시'].max().reset_index()\n",
+    "\n",
+    "    # '정상회원' 고객 추출\n",
+    "    normal_member = df_sales[df_sales['회원상태'] == '정상회원']\n",
+    "\n",
+    "    # n개월 이내 확인\n",
+    "    period = latest_date_data - timedelta(days=month*30)\n",
+    "\n",
+    "    # 유령고객 조회\n",
+    "    ghost_member = latest_date_member[latest_date_member['주문일시'] < period]\n",
+    "\n",
+    "    # 유령고객 비율 계산\n",
+    "    ghost_member_ratio = (ghost_member.shape[0] / normal_member['회원번호'].nunique()) * 100\n",
+    "\n",
+    "    return ghost_member_ratio\n",
+    "\n",
+    "month = int(input('최근 주문이 없는 고객 조회(기간을 월 단위로 입력하세요.):'))\n",
+    "ghost_ratio = latest_date_order(df_sales, month)\n",
+    "print('유령고객 비율:', round(ghost_ratio, 2), '%')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8f30f0-bc08-425d-940a-ea085783ed3b",
+   "id": "4ca02e24-207b-4794-b77d-1754839982bf",
    "metadata": {},
    "outputs": [],
    "source": []
