--- a/RFM, 군집분석.ipynb
+++ b/RFM, 군집분석.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "3b36df75-c917-4b8b-a8a3-750646ba53c3",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "3     3    6.934623  200.198799  2.330087e+06"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,8 +116,7 @@
     "rfm_df[\"클러스터\"] = kmeans.fit_predict(rfm_scaled)\n",
     "\n",
     "# 클러스터별 평균 RFM 값 \n",
-    "cluster_analysis_ = rfm_df.groupby(\"클러스터\")[[\"Recency\", \"Frequency\", \"Monetary\"]].mean().reset_index()\n",
-    "\n",
+    "cluster_analysis = rfm_df.groupby(\"클러스터\")[[\"Recency\", \"Frequency\", \"Monetary\"]].mean().reset_index()\n",
     "cluster_analysis"
    ]
   },
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "87e5d515-68e9-4fcc-86d4-a246d2adf1fa",
    "metadata": {},
    "outputs": [
@@ -274,7 +273,7 @@
        "[12540 rows x 5 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "2713f130-2e21-4465-aae9-b8842a56657c",
    "metadata": {},
    "outputs": [
@@ -488,7 +487,7 @@
        "[3 rows x 59 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "759bb64e-0e2c-44f5-ab08-fd65001e56a4",
    "metadata": {},
    "outputs": [
@@ -614,7 +613,7 @@
        "2        7.297852e+08  7773.125583      61.723817"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,6 +653,276 @@
     "# 클러스터별 평균 할인/포인트 사용 패턴 \n",
     "cluster_summary = discount_data.groupby('Cluster').mean()\n",
     "cluster_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62fa7568-ff28-44b6-a940-57df218e3480",
+   "metadata": {},
+   "source": [
+    "RFM기반 클러스터별 고객이탈확률 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f8f8dc29-4a14-480c-a796-5ea76d0d35a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   RFM_Cluster      이탈여부\n",
+      "0            0  1.000000\n",
+      "1            1  0.198993\n",
+      "2            2  0.000000\n",
+      "3            3  0.014009\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfm_file = \"RFM_Score.csv\"\n",
+    "sales_data_file = \"Sales_Data05.csv\"\n",
+    "member_data_file = \"Member_Data.csv\"\n",
+    "\n",
+    "rfm_df = pd.read_csv(rfm_file, encoding=\"utf-8\")\n",
+    "sales_data = pd.read_csv(sales_data_file, encoding=\"cp949\")\n",
+    "member_data = pd.read_csv(member_data_file, encoding=\"euc-kr\")\n",
+    "\n",
+    "# RFM 클러스터링 \n",
+    "rfm_features = rfm_df[[\"Recency\", \"Frequency\", \"Monetary\"]]\n",
+    "\n",
+    "# 데이터 정규화\n",
+    "scaler = StandardScaler()\n",
+    "rfm_scaled = scaler.fit_transform(rfm_features)\n",
+    "\n",
+    "# K-Means 클러스터링 (K=4)\n",
+    "optimal_k = 4\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=42, n_init=10)\n",
+    "rfm_df[\"RFM_Cluster\"] = kmeans.fit_predict(rfm_scaled)\n",
+    "\n",
+    "# 3. 기존 이탈 예측 모델 데이터 생성\n",
+    "data = sales_data.groupby(\"회원번호\").agg({ \"구매수량\": \"sum\", \"구매금액\": \"sum\",\"주문일시\": \"max\"}).reset_index()\n",
+    "\n",
+    "# 회원 데이터 병합\n",
+    "data = data.merge(member_data, on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 최신 날짜 기준 Recency 계산\n",
+    "data[\"주문일시\"] = pd.to_datetime(data[\"주문일시\"])\n",
+    "latest_date = data[\"주문일시\"].max()\n",
+    "data[\"days_since_last_purchase\"] = (latest_date - data[\"주문일시\"]).dt.days\n",
+    "\n",
+    "# 이탈 여부 라벨링 (60일 이상 구매 없음 = 이탈)\n",
+    "data[\"이탈여부\"] = np.where(data[\"days_since_last_purchase\"] > 60, 1, 0)\n",
+    "\n",
+    "# RFM 클러스터 정보를 추가\n",
+    "data = data.merge(rfm_df[[\"회원번호\", \"RFM_Cluster\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 클러스터별 이탈 확률 분석\n",
+    "cluster_churn_rate = data.groupby(\"RFM_Cluster\")[\"이탈여부\"].mean().reset_index()\n",
+    "\n",
+    "print(cluster_churn_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "137d44e8-82bc-4149-b8b9-9a524cb67a9c",
+   "metadata": {},
+   "source": [
+    "고객 특성기반 클러스터별 고객 이탈 확률 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "28a3ae50-1ae2-43dd-bfd8-1e1a1b2dbcde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   클러스터      이탈여부\n",
+      "0     0  0.798775\n",
+      "1     1  0.816870\n",
+      "2     2  0.811608\n",
+      "3     3  0.813636\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "df_member = pd.read_csv(member_data_file, encoding=\"cp949\")\n",
+    "sales_data = pd.read_csv(sales_data_file, encoding=\"cp949\")\n",
+    "\n",
+    "# 고객 특성 데이터 전처리\n",
+    "customer_data = df_member[[\"회원번호\", \"나이\", \"성별\", \"결혼\", \"구독여부\"]].fillna(\"미정\")\n",
+    "customer_data[\"구독여부\"] = customer_data[\"구독여부\"].astype(str)  # 문자열 변환\n",
+    "\n",
+    "# 데이터 변환 (숫자형과 범주형 변수 처리)\n",
+    "column_transformer = ColumnTransformer([\n",
+    "    ('num', StandardScaler(), [\"나이\"]),\n",
+    "    ('cat', OneHotEncoder(handle_unknown='ignore', dtype=int), [\"성별\", \"결혼\", \"구독여부\"])\n",
+    "])\n",
+    "\n",
+    "# K-Means 클러스터링 (K=4)\n",
+    "optimal_k = 4\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=42, n_init=10)\n",
+    "customer_data[\"클러스터\"] = kmeans.fit_predict(column_transformer.fit_transform(customer_data))\n",
+    "\n",
+    "# 이탈 정보 추가 (60일 이상 구매 없음 = 이탈)\n",
+    "sales_data[\"주문일시\"] = pd.to_datetime(sales_data[\"주문일시\"])\n",
+    "latest_date = sales_data[\"주문일시\"].max()\n",
+    "sales_data[\"days_since_last_purchase\"] = (latest_date - sales_data[\"주문일시\"]).dt.days\n",
+    "sales_data[\"이탈여부\"] = np.where(sales_data[\"days_since_last_purchase\"] > 60, 1, 0)\n",
+    "\n",
+    "# 회원번호 기준으로 병합\n",
+    "customer_data = customer_data.merge(sales_data[[\"회원번호\", \"이탈여부\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 클러스터별 이탈 확률 분석\n",
+    "cluster_churn_rate = customer_data.groupby(\"클러스터\")[\"이탈여부\"].mean().reset_index()\n",
+    "\n",
+    "print(cluster_churn_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f16bfb84-dab9-420c-9e92-157dcb59c87c",
+   "metadata": {},
+   "source": [
+    "상품기반 클러스터별 고객이탈확률 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b4afba05-da17-4c38-8737-5390ae40f846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cluster      이탈여부\n",
+      "0        0  0.021727\n",
+      "1        1  0.438494\n",
+      "2        2  0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sales = pd.read_csv(sales_data_file, encoding=\"cp949\")\n",
+    "product_df = pd.read_csv(product_data_file, encoding=\"utf-8\")\n",
+    "member_df = pd.read_csv(member_data_file, encoding=\"euc-kr\")\n",
+    "\n",
+    "# 컬럼 선택 (회원번호, 제품번호, 구매수량)\n",
+    "sales_data = df_sales[[\"회원번호\", \"제품번호\", \"구매수량\"]]\n",
+    "\n",
+    "# 제품번호 기준으로 제품 대분류 정보 추가\n",
+    "data = sales_data.merge(product_df[[\"제품번호\", \"물품대분류\"]], on=\"제품번호\", how=\"left\")\n",
+    "\n",
+    "# 고객별 상품 유형별 구매 수량 Pivot Table 생성\n",
+    "customer_product = data.pivot_table(index=\"회원번호\", columns=\"물품대분류\", values=\"구매수량\", aggfunc=\"sum\", fill_value=0)\n",
+    "\n",
+    "# 데이터 표준화\n",
+    "scaler = StandardScaler()\n",
+    "customer_scaled = scaler.fit_transform(customer_product)\n",
+    "\n",
+    "# K-Means 클러스터링 적용 (K=3)\n",
+    "optimal_k = 3\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=42, n_init=10)\n",
+    "customer_product[\"Cluster\"] = kmeans.fit_predict(customer_scaled)\n",
+    "\n",
+    "# 클러스터 정보 병하 (회원 정보 추가)\n",
+    "customer_product = customer_product.reset_index()\n",
+    "customer_product = customer_product.merge(member_df[[\"회원번호\", \"나이\", \"성별\", \"결혼\", \"구독여부\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 최신 주문 데이터 기준으로 이탈 여부 계산\n",
+    "df_sales[\"주문일시\"] = pd.to_datetime(df_sales[\"주문일시\"])\n",
+    "latest_date = df_sales[\"주문일시\"].max()\n",
+    "\n",
+    "# 회원번호별 최신 주문만 유지 (이탈 여부 계산)\n",
+    "df_sales_latest = df_sales.sort_values(by=[\"회원번호\", \"주문일시\"], ascending=[True, False])\n",
+    "df_sales_latest = df_sales_latest.drop_duplicates(subset=[\"회원번호\"], keep=\"first\")\n",
+    "df_sales_latest[\"days_since_last_purchase\"] = (latest_date - df_sales_latest[\"주문일시\"]).dt.days\n",
+    "df_sales_latest[\"이탈여부\"] = np.where(df_sales_latest[\"days_since_last_purchase\"] > 60, 1, 0)\n",
+    "\n",
+    "# 회원번호 기준으로 병합\n",
+    "customer_product = customer_product.merge(df_sales_latest[[\"회원번호\", \"이탈여부\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 클러스터별 이탈 확률 분석\n",
+    "cluster_churn_rate = customer_product.groupby(\"Cluster\")[\"이탈여부\"].mean().reset_index()\n",
+    "\n",
+    "print(cluster_churn_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db97e77e-84dc-4ab4-ad86-2b2bb3553882",
+   "metadata": {},
+   "source": [
+    "할인/포인트 사용기반 클러스터별 고객이탈확률 분석"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c0ad4180-afba-4942-b169-308c9fa024a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Cluster      이탈여부\n",
+      "0        0  0.067531\n",
+      "1        1  0.037037\n",
+      "2        2  0.069512\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sales = pd.read_csv(sales_data_file, encoding=\"cp949\")\n",
+    "member_df = pd.read_csv(member_data_file, encoding=\"euc-kr\")\n",
+    "\n",
+    "# 필요한 컬럼 선택 (회원번호, 사용 적립금, 사용 포인트 네이버)\n",
+    "discount_data = df_sales[[\"회원번호\", \"사용 적립금\", \"사용 포인트 네이버\"]].copy()\n",
+    "\n",
+    "# 결측값 처리\n",
+    "discount_data.fillna(0, inplace=True)\n",
+    "\n",
+    "# 데이터 표준화\n",
+    "scaler = StandardScaler()\n",
+    "discount_scaled = scaler.fit_transform(discount_data[[\"사용 적립금\", \"사용 포인트 네이버\"]])\n",
+    "\n",
+    "# K-Means 클러스터링 적용 (K=3)\n",
+    "optimal_k = 3\n",
+    "kmeans = KMeans(n_clusters=optimal_k, random_state=42, n_init=10)\n",
+    "discount_data[\"Cluster\"] = kmeans.fit_predict(discount_scaled)\n",
+    "\n",
+    "# 클러스터 정보 병합 (회원 정보 추가)\n",
+    "discount_data = discount_data.merge(member_df[[\"회원번호\", \"나이\", \"성별\", \"결혼\", \"구독여부\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 최신 주문 데이터 기준으로 이탈 여부 계산\n",
+    "df_sales[\"주문일시\"] = pd.to_datetime(df_sales[\"주문일시\"])\n",
+    "latest_date = df_sales[\"주문일시\"].max()\n",
+    "\n",
+    "# 회원번호별 최신 주문 (이탈 여부 계산)\n",
+    "df_sales_latest = df_sales.sort_values(by=[\"회원번호\", \"주문일시\"], ascending=[True, False])\n",
+    "df_sales_latest = df_sales_latest.drop_duplicates(subset=[\"회원번호\"], keep=\"first\")\n",
+    "df_sales_latest[\"days_since_last_purchase\"] = (latest_date - df_sales_latest[\"주문일시\"]).dt.days\n",
+    "df_sales_latest[\"이탈여부\"] = np.where(df_sales_latest[\"days_since_last_purchase\"] > 60, 1, 0)\n",
+    "\n",
+    "# 회원번호 기준으로 병합\n",
+    "discount_data = discount_data.merge(df_sales_latest[[\"회원번호\", \"이탈여부\"]], on=\"회원번호\", how=\"left\")\n",
+    "\n",
+    "# 클러스터별 이탈 확률 분석\n",
+    "cluster_churn_rate = discount_data.groupby(\"Cluster\")[\"이탈여부\"].mean().reset_index()\n",
+    "\n",
+    "print(cluster_churn_rate)"
    ]
   }
  ],
